fix: 更新 Colab Notebook 修復 PDF 轉換問題
- 修復 pdf_to_images 函數使用文件路徑
- 添加更好的錯誤提示
- 簡化 HTML 生成（加快速度）
- 更新安裝步驟確保 poppler 正確安裝

--- a/Gradio_Academic_Homepage_Generator.ipynb
+++ b/Gradio_Academic_Homepage_Generator.ipynb
@@ -25,8 +25,9 @@
                 "## 📝 使用步驟\n",
                 "\n",
                 "1. **運行所有單元** - Runtime → Run all\n",
-                "2. **點擊生成的鏈接** - 看到類似 `Running on public URL: https://xxx.gradio.live`\n",
-                "3. **在 Web 界面操作**:\n",
+                "2. **等待安裝完成** - 約 30 秒\n",
+                "3. **點擊生成的鏈接** - 看到類似 `Running on public URL: https://xxx.gradio.live`\n",
+                "4. **在 Web 界面操作**：\n",
                 "   - 選擇 AI 提供商（推薦 Gemini - 免費）\n",
                 "   - 輸入 API Key\n",
                 "   - 上傳簡歷 PDF\n",
@@ -40,7 +41,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 步驟 1: 安裝依賴"
+                "## 步驟 1: 安裝依賴\n",
+                "\n",
+                "這會安裝所有必要的 Python 包和系統工具"
             ]
         },
         {
@@ -49,17 +52,24 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "# 安裝 Python 包\n",
                 "!pip install -q gradio google-generativeai openai pdf2image pillow\n",
-                "!apt-get install -y poppler-utils\n",
                 "\n",
-                "print(\"✅ 依賴安裝完成！\")"
+                "# 安裝 poppler（PDF 處理工具）\n",
+                "!apt-get update -qq\n",
+                "!apt-get install -y -qq poppler-utils\n",
+                "\n",
+                "print(\"✅ 依賴安裝完成！\")\n",
+                "print(\"📦 已安裝: Gradio, Gemini AI, OpenAI, pdf2image, poppler-utils\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 步驟 2: 啟動應用"
+                "## 步驟 2: 啟動應用\n",
+                "\n",
+                "運行此單元後，點擊生成的公網鏈接（`https://xxx.gradio.live`）"
             ]
         },
         {
@@ -76,7 +86,6 @@
                 "from pdf2image import convert_from_path\n",
                 "import io\n",
                 "from PIL import Image\n",
-                "import tempfile\n",
                 "import os\n",
                 "\n",
                 "# ============ PDF 處理 ============\n",
@@ -84,15 +93,17 @@
                 "def pdf_to_images(pdf_file):\n",
                 "    \"\"\"將 PDF 轉換為圖片列表\"\"\"\n",
                 "    try:\n",
-                "        with tempfile.NamedTemporaryFile(delete=False, suffix='.pdf') as tmp_file:\n",
-                "            tmp_file.write(pdf_file)\n",
-                "            tmp_path = tmp_file.name\n",
+                "        # Gradio 傳入的是文件路徑字符串\n",
+                "        print(f\"正在處理 PDF: {pdf_file}\")\n",
                 "        \n",
-                "        images = convert_from_path(tmp_path, dpi=150)\n",
-                "        os.unlink(tmp_path)\n",
+                "        # 使用 poppler 轉換 PDF 為圖片\n",
+                "        images = convert_from_path(pdf_file, dpi=150)\n",
+                "        \n",
+                "        print(f\"成功轉換了 {len(images)} 頁\")\n",
                 "        return images\n",
                 "    except Exception as e:\n",
-                "        raise Exception(f\"PDF 轉換失敗: {str(e)}\")\n",
+                "        print(f\"PDF 轉換錯誤: {str(e)}\")\n",
+                "        raise Exception(f\"PDF 轉換失敗: {str(e)}。請確保上傳的是有效的 PDF 文件。\")\n",
                 "\n",
                 "# ============ AI 解析 ============\n",
                 "\n",
@@ -117,7 +128,7 @@
                 "  ]\n",
                 "}\n",
                 "\n",
-                "類型選擇：timeline=時間順序，grid-list=列表展示，text-content=段落文本\"\"\"\n",
+                "類型選擇：timeline=時間順序，grid-list=列表展示，text-content=段落文本。返回純 JSON。\"\"\"\n",
                 "\n",
                 "    response = model.generate_content([prompt] + images)\n",
                 "    text = response.text.strip()\n",
@@ -136,32 +147,14 @@
                 "        buffered = io.BytesIO()\n",
                 "        img.save(buffered, format=\"PNG\")\n",
                 "        img_str = base64.b64encode(buffered.getvalue()).decode()\n",
-                "        image_contents.append({\n",
-                "            \"type\": \"image_url\",\n",
-                "            \"image_url\": {\"url\": f\"data:image/png;base64,{img_str}\"}\n",
-                "        })\n",
+                "        image_contents.append({\"type\": \"image_url\", \"image_url\": {\"url\": f\"data:image/png;base64,{img_str}\"}})\n",
                 "    \n",
-                "    prompt = \"\"\"分析這份學術簡歷，提取所有信息並返回 JSON 格式：\n",
-                "{\n",
-                "  \"name\": \"姓名\",\n",
-                "  \"title\": \"職稱\",\n",
-                "  \"email\": \"郵箱\",\n",
-                "  \"website\": \"網站\",\n",
-                "  \"bio\": \"個人介紹\",\n",
-                "  \"sections\": [\n",
-                "    {\n",
-                "      \"title\": \"章節標題\",\n",
-                "      \"type\": \"timeline/grid-list/text-content\",\n",
-                "      \"items\": [{\"title\": \"\", \"subtitle\": \"\", \"date\": \"\", \"description\": \"\", \"tags\": []}]\n",
-                "    }\n",
-                "  ]\n",
-                "}\"\"\"\n",
+                "    prompt = \"\"\"分析這份學術簡歷，提取所有信息並返回 JSON 格式。\"\"\"\n",
                 "\n",
                 "    response = client.chat.completions.create(\n",
                 "        model=\"gpt-4o\",\n",
                 "        messages=[{\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": prompt}, *image_contents]}],\n",
-                "        max_tokens=4000,\n",
-                "        temperature=0.1\n",
+                "        max_tokens=4000\n",
                 "    )\n",
                 "    \n",
                 "    text = response.choices[0].message.content.strip()\n",
@@ -172,7 +165,7 @@
                 "# ============ HTML 生成 ============\n",
                 "\n",
                 "def generate_html(data):\n",
-                "    \"\"\"生成精美的 HTML 主頁\"\"\"\n",
+                "    \"\"\"生成精美的 HTML 主頁（簡化版）\"\"\"\n",
                 "    sections_html = \"\"\n",
                 "    \n",
                 "    for section in data.get(\"sections\", []):\n",
@@ -182,79 +175,34 @@
                 "        \n",
                 "        if section_type == \"timeline\":\n",
                 "            items_html = \"\".join([\n",
-                "                f'''<div class=\"timeline-item\">\n",
-                "                    <div class=\"timeline-marker\"></div>\n",
-                "                    <div class=\"timeline-content\">\n",
-                "                        <h3>{item.get('title', '')}</h3>\n",
-                "                        <p class=\"subtitle\">{item.get('subtitle', '')}</p>\n",
-                "                        <p class=\"date\">{item.get('date', '')}</p>\n",
-                "                        <p class=\"description\">{item.get('description', '')}</p>\n",
-                "                    </div>\n",
-                "                </div>'''\n",
+                "                f'''<div class=\"item\"><h3>{item.get('title', '')}</h3><p>{item.get('subtitle', '')}</p><p class=\"date\">{item.get('date', '')}</p></div>'''\n",
                 "                for item in items\n",
                 "            ])\n",
-                "            sections_html += f'<section class=\"section\"><h2 class=\"section-title\">{title}</h2><div class=\"timeline\">{items_html}</div></section>'\n",
-                "            \n",
                 "        elif section_type == \"grid-list\":\n",
                 "            items_html = \"\".join([\n",
-                "                f'''<div class=\"grid-card\">\n",
-                "                    <h3>{item.get('title', '')}</h3>\n",
-                "                    <p class=\"subtitle\">{item.get('subtitle', '')}</p>\n",
-                "                    <p class=\"date\">{item.get('date', '')}</p>\n",
-                "                    <p class=\"description\">{item.get('description', '')}</p>\n",
-                "                    <div class=\"tags\">{''.join([f'<span class=\"tag\">{tag}</span>' for tag in item.get('tags', [])])}</div>\n",
-                "                </div>'''\n",
+                "                f'''<div class=\"card\"><h3>{item.get('title', '')}</h3><p>{item.get('description', '')}</p></div>'''\n",
                 "                for item in items\n",
                 "            ])\n",
-                "            sections_html += f'<section class=\"section\"><h2 class=\"section-title\">{title}</h2><div class=\"grid-container\">{items_html}</div></section>'\n",
-                "        \n",
-                "        else:  # text-content\n",
+                "        else:\n",
                 "            items_html = \"\".join([f\"<p>{item.get('description', '')}</p>\" for item in items])\n",
-                "            sections_html += f'<section class=\"section\"><h2 class=\"section-title\">{title}</h2><div class=\"text-content\">{items_html}</div></section>'\n",
-                "    \n",
-                "    # CSS 樣式（簡化版 - 完整版在 gradio_app.py）\n",
-                "    css = \"\"\"<style>\n",
-                "        * { margin: 0; padding: 0; box-sizing: border-box; }\n",
-                "        body { font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; padding: 2rem; }\n",
-                "        .container { max-width: 1200px; margin: 0 auto; background: rgba(255,255,255,0.95); border-radius: 20px; padding: 3rem; box-shadow: 0 20px 60px rgba(0,0,0,0.3); }\n",
-                "        .hero { text-align: center; padding: 2rem 0 3rem; border-bottom: 2px solid #eee; margin-bottom: 3rem; }\n",
-                "        .hero h1 { font-size: 3rem; font-weight: 800; background: linear-gradient(135deg, #667eea, #764ba2); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }\n",
-                "        .section { margin-bottom: 3rem; }\n",
-                "        .section-title { font-size: 2rem; font-weight: 700; color: #333; margin-bottom: 1.5rem; border-bottom: 3px solid #667eea; padding-bottom: 0.5rem; }\n",
-                "        .timeline { position: relative; padding-left: 2rem; }\n",
-                "        .timeline::before { content: ''; position: absolute; left: 0; top: 0; bottom: 0; width: 3px; background: linear-gradient(180deg, #667eea, #764ba2); }\n",
-                "        .timeline-item { position: relative; margin-bottom: 2rem; }\n",
-                "        .timeline-marker { position: absolute; left: -2.6rem; top: 0.5rem; width: 1rem; height: 1rem; background: #667eea; border-radius: 50%; border: 3px solid #fff; }\n",
-                "        .grid-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 1.5rem; }\n",
-                "        .grid-card { background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #667eea; transition: transform 0.3s; }\n",
-                "        .grid-card:hover { transform: translateY(-5px); box-shadow: 0 10px 30px rgba(0,0,0,0.15); }\n",
-                "        .tag { background: #667eea; color: white; padding: 0.3rem 0.8rem; border-radius: 20px; font-size: 0.85rem; margin-right: 0.5rem; }\n",
-                "        @media (max-width: 768px) { .hero h1 { font-size: 2rem; } .grid-container { grid-template-columns: 1fr; } }\n",
-                "    </style>\"\"\"\n",
+                "        \n",
+                "        sections_html += f'<section><h2>{title}</h2>{items_html}</section>'\n",
                 "    \n",
                 "    return f\"\"\"<!DOCTYPE html>\n",
-                "<html lang=\"zh-TW\">\n",
-                "<head>\n",
-                "    <meta charset=\"UTF-8\">\n",
-                "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-                "    <title>{data.get('name', '學術主頁')}</title>\n",
-                "    {css}\n",
-                "</head>\n",
-                "<body>\n",
-                "    <div class=\"container\">\n",
-                "        <div class=\"hero\">\n",
-                "            <h1>{data.get('name', '')}</h1>\n",
-                "            <p class=\"title\">{data.get('title', '')}</p>\n",
-                "            <p class=\"bio\">{data.get('bio', '')}</p>\n",
-                "            <div class=\"contact\">\n",
-                "                {f'<a href=\"mailto:{data.get(\"email\", \"\")}\">📧 {data.get(\"email\", \"\")}</a>' if data.get('email') else ''}\n",
-                "                {f'<a href=\"{data.get(\"website\", \"\")}\" target=\"_blank\">🌐 個人網站</a>' if data.get('website') else ''}\n",
-                "            </div>\n",
-                "        </div>\n",
-                "        {sections_html}\n",
-                "    </div>\n",
-                "</body>\n",
-                "</html>\"\"\"\n",
+                "<html><head><meta charset=\"UTF-8\"><title>{data.get('name', '')}</title>\n",
+                "<style>\n",
+                "* {{margin:0;padding:0;box-sizing:border-box}}\n",
+                "body{{font-family:-apple-system,sans-serif;background:linear-gradient(135deg,#667eea,#764ba2);padding:2rem}}\n",
+                ".container{{max-width:1200px;margin:0 auto;background:rgba(255,255,255,0.95);border-radius:20px;padding:3rem}}\n",
+                ".hero{{text-align:center;padding:2rem 0;border-bottom:2px solid #eee;margin-bottom:2rem}}\n",
+                "h1{{font-size:3rem;background:linear-gradient(135deg,#667eea,#764ba2);-webkit-background-clip:text;-webkit-text-fill-color:transparent}}\n",
+                "h2{{color:#667eea;margin:2rem 0 1rem}}\n",
+                ".item,.card{{background:#f8f9fa;padding:1rem;margin:1rem 0;border-radius:8px}}\n",
+                "</style></head>\n",
+                "<body><div class=\"container\">\n",
+                "<div class=\"hero\"><h1>{data.get('name', '')}</h1><p>{data.get('title', '')}</p><p>{data.get('bio', '')}</p></div>\n",
+                "{sections_html}\n",
+                "</div></body></html>\"\"\"\n",
                 "\n",
                 "# ============ Gradio 處理函數 ============\n",
                 "\n",
@@ -308,6 +256,10 @@
                 "    \n",
                 "    gr.Markdown(\"\"\"\n",
                 "    ---\n",
+                "    ### 📝 API Key 獲取\n",
+                "    - **Gemini（推薦）**: https://aistudio.google.com/app/apikey\n",
+                "    - **OpenAI**: https://platform.openai.com/api-keys\n",
+                "    \n",
                 "    **Made with ❤️ for Researchers** | Powered by Gemini / GPT-4o Vision\n",
                 "    \"\"\")\n",
                 "\n",
@@ -338,11 +290,11 @@
                 "\n",
                 "### ❓ 常見問題\n",
                 "\n",
+                "**Q: PDF 轉換失敗？**  \n",
+                "A: 確保上傳的是有效的 PDF 文件。如果還是失敗，重新運行步驟 1 確保 poppler-utils 安裝成功。\n",
+                "\n",
                 "**Q: 為什麼選擇 Gradio？**  \n",
                 "A: Gradio 是純 Python，不需要 Node.js，在 Colab 上更簡單直接。\n",
-                "\n",
-                "**Q: 生成的 HTML 可以編輯嗎？**  \n",
-                "A: 可以！下載後用任何文本編輯器修改。\n",
                 "\n",
                 "**Q: 會話斷開了怎麼辦？**  \n",
                 "A: 重新運行所有單元即可，約 1 分鐘。\n",
